fix issue with search field in FireFox on smaller screens, add zoom icons to Details image thumbs

--- a/src/components/Explorer/Details/styles.scss
+++ b/src/components/Explorer/Details/styles.scss
@@ -125,6 +125,37 @@
 }
 .detail-photos {
   margin: 20px 0 0 0;
+  .my-masonry-grid_column {
+    > div {
+      display: block;
+      position: relative;
+      cursor: pointer;
+      &::before {
+        content: '';
+        position: absolute;
+        top: calc(50% - 15px);
+        left: calc(50% - 15px);
+        width: 30px;
+        height: 30px;
+        background: rgba(0, 0, 0, 0.5);
+      }
+      &::after {
+        content: '';
+        position: absolute;
+        top: calc(50% - 7px);
+        left: calc(50% - 7px);
+        width: 14px;
+        height: 14px;
+        background: url(./images/search-plus-light.svg) no-repeat center;
+        background-size: cover;
+      }
+      &:hover {
+        &::before {
+          background: rgba(0, 0, 0, 1);
+        }
+      }
+    }
+  }
 }
 .my-masonry-grid {
   display: -webkit-box; /* Not needed if autoprefixing */
