--- a/src/components/NavBar/Search/styles.scss
+++ b/src/components/NavBar/Search/styles.scss
@@ -4,6 +4,9 @@
 }
 .search-nav {
   padding: 0 10px;
+  @media screen and (max-width: 1280px) {
+    display: none;
+  }
 }
 .search-nav .fa-icon {
   color: #8f8d8d;
@@ -16,6 +19,9 @@
 .search-input {
   display: flex;
   flex-grow: 1;
+  @media screen and (max-width: 1280px) {
+    padding-left: 10px;
+  }
 }
 .search-input input {
   border: none;
